--- a/Ordenamiento/MainWindow.xaml
+++ b/Ordenamiento/MainWindow.xaml
@@ -8,7 +8,9 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <ListBox x:Name="lstNumeros" HorizontalAlignment="Left" Height="401" Margin="10,10,0,0" VerticalAlignment="Top" Width="136"/>
-        <Button x:Name="btnOrdenar" Content="Ordenar" HorizontalAlignment="Left" Margin="165,27,0,0" VerticalAlignment="Top" Width="75" Click="BtnOrdenar_Click"/>
+        <Button x:Name="btnOrdenar" Content="Shell" HorizontalAlignment="Left" Margin="173,55,0,0" VerticalAlignment="Top" Width="75" Click="BtnOrdenar_Click"/>
+        <Label Content="Ordenar" HorizontalAlignment="Left" Margin="173,24,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnBubble" Content="Bubble" HorizontalAlignment="Left" Margin="173,155,0,0" VerticalAlignment="Top" Width="75" Click="BtnBubble_Click"/>
 
     </Grid>
 </Window>
